--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-codepen": "^0.1.0",
     "react-dom": "^17.0.1",
+    "react-error-overlay": "^6.0.8",
     "react-geolocated": "^3.1.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
